Fix Render build: replace Map.of with Collections.singletonMap (Java 8 compat)
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>